@@ -1,5 +1,6 @@
 
 5.2b1 -> 5.3a1
+    - jbj: rpmdb: stub-in DB_CONFIG.in (no parameters and uninstalled for now).
     - jbj: upgrade to db-4.8.24.
     - jbj: spook: install spooktool next to semodule.
     - jbj: spook: embed the "spook" DSL just like augeas (nee "augtool").
